Update Checker.java
Scope check